update styling to include percents

--- a/css/style.css
+++ b/css/style.css
@@ -1,47 +1,55 @@
-@charset "UTF-8";
 /* CSS Document */
-
+@charset "UTF-8";
+ 
+ 
 @font-face {
-    font-family: 'bangla_mnregular';
-    src: url('../fonts/banglamn-webfont.eot');
-    src: url('../fonts/banglamn-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/banglamn-webfont.woff2') format('woff2'),
-         url('../fonts/banglamn-webfont.woff') format('woff'),
-         url('../fonts/banglamn-webfont.ttf') format('truetype'),
-         url('../fonts/banglamn-webfont.svg#bangla_mnregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-
+	font-family: 'bangla_mnregular';
+	src: url('../fonts/banglamn-webfont.eot');
+	src: url('../fonts/banglamn-webfont.eot?#iefix') format('embedded-opentype'),
+	url('../fonts/banglamn-webfont.woff2') format('woff2'),
+	url('../fonts/banglamn-webfont.woff') format('woff'),
+	url('../fonts/banglamn-webfont.ttf') format('truetype'),
+	url('../fonts/banglamn-webfont.svg#bangla_mnregular') format('svg');
+	font-weight: normal;
+	font-style: normal;
+ }
+ 
 body {
 	margin: 0;
 	padding: 0;
 	font-family: bangla_mnregular;
-}
-
+ }
+ 
 ul {
 	list-style: none;
 	padding: 0;
 	margin: 0;
+ }
+ 
+li {position: relative;}
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button { 
+    -webkit-appearance: none; 
+    margin: 0; 
+    margin-right: 10px;
 }
-
-
-
+ 
 .wrapper {
 	background: url(../images/background.png) no-repeat top center;
 	width: 1024px;
 	height: 768px;
 	background-size: 1024px 768px;
 	position: relative;
-}
-
+ }
+ 
 /* DIAGNOSIS COLUMN */
 div.diagnosiscolumn {
 	position: absolute;
 	top: 225px;
 	left: 138px;
-}
-
+ }
+ 
 .diagnosiscolumn ul li {
 	border: none;
 	text-align: center;
@@ -52,111 +60,162 @@ div.diagnosiscolumn {
 	color: #333;
 	background: none;
 	margin-bottom: 8px;
-}
-
+ }
+ 
 /* PATIENTS COLUMN */
 div.patientcolumn {
 	position: absolute;
 	top: 225px;
-	left: 317px;
-}
-
-.patientcolumn ul li {
-	margin-bottom: 8px;
-}
-
-.patientcolumn ul li input {
-	border: none;
-	text-align: center;
-	font-family: bangla_mnregular;
-	width: 92px;
-	padding: 15px 0 10px 0;
-	font-size: 24px;
-	color: #15520e;
-	background: none;
-}
-
+	left: 316px;
+ }
+ 
+.patientcolumn ul li {margin-bottom: 8px;}
+ 
+	.patientcolumn ul li input {
+		border: none;
+		text-align: right;
+		font-family: bangla_mnregular;
+		width: 87px;
+		padding: 15px 5px 10px 0;
+		font-size: 24px;
+		color: #15520e;
+		background: none;
+	 }
+ 
 /* REVENUE COLUMN */
 div.revenuecolumn {
 	position: absolute;
 	top: 225px;
 	left: 491px;
-}
-
-.revenuecolumn ul li {
-	margin-bottom: 8px;
-}
-
+ }
+ 
+.revenuecolumn li {margin-bottom: 8px;}
+ 
+	.revenuecolumn li::before {
+		content: '$';
+		position: absolute;
+		top: 20px;
+		left: -10px
+	 }
+ 
 .revenuecolumn ul li input {
 	border: none;
-	text-align: center;
+	text-align: right;
 	font-family: bangla_mnregular;
-	width: 92px;
+	width: 100px;
 	padding: 15px 0 10px 0;
 	font-size: 24px;
 	color: #333;
 	background: none;
-}
-
+ }
+ 
 /* PROCEDURE COLUMN */
 div.procedurecolumn {
 	position: absolute;
 	top: 568px;
-	left: 210px;
-}
-
-.procedurecolumn ul li {
-	margin-bottom: 9px;
-}
-
-.procedurecolumn ul li input {
-	border: none;
-	text-align: center;
-	font-family: bangla_mnregular;
-	width: 147px;
-	padding: 12px 0 5px 0;
-	font-size: 28px;
-	color: #15520e;
-	background: none;
-}
-
+	right: 670px;
+ }
+ 
+.procedurecolumn ul {position: relative;}
+ 
+	.procedurecolumn ul li {margin-bottom: 9px;}
+ 
+		.procedurecolumn ul li.cost::before {
+			content: '$';
+			position: absolute;
+			top: 6px;
+			right: 120px;
+			color: #15520e;
+			font-size: 20px;
+		 }
+ 
+		.procedurecolumn ul li.participation::after {
+			content: '%';
+			position: absolute;
+			top: 71px;
+			right: 7px;
+			color: #15520e;
+			font-size: 20px;
+		 }
+ 
+		.procedurecolumn ul li.cost input {
+			position: absolute;
+			top: -11px;
+			right: 0;
+			border: none;
+			text-align: right;
+			font-family: bangla_mnregular;
+			width: 147px;
+			padding: 12px 0px 8px 0;
+			font-size: 28px;
+			color: #15520e;
+			background: none;
+		 }
+ 
+		.procedurecolumn ul li.participation input {
+			position: absolute;
+			top: 55px;
+			right: 0;
+			border: none;
+			text-align: right;
+			font-family: bangla_mnregular;
+			width: 126px;
+			padding: 12px 20px 8px 0;
+			font-size: 28px;
+			color: #15520e;
+			background: none;
+		 }
+ 
 /* PIE COLUMN */
 div.piecolumn {
 	position: absolute;
 	top: 166px;
 	right: 231px;
-}
-
-.piecolumn ul li {
-	margin-bottom: 12px;
-}
-
+ }
+ 
+.piecolumn ul li {margin-bottom: 12px;}
+ 
+.piecolumn li::after {
+	content: '%';
+	position: absolute;
+	top: 14px;
+	right: 10px;
+	color: #fff;
+	font-size: 16px;
+ }
+ 
+.piecolumn li.managedcare::after {
+	color: #a0a0a0;
+	margin-top: -2px;
+ }
+ 
 .piecolumn ul li input {
 	border: none;
-	text-align: center;
+	text-align: right;
 	font-family: bangla_mnregular;
 	width: 73px;
-	padding: 12px 0 9px 0;
+	padding: 12px 15px 9px 0;
 	font-size: 19px;
 	color: #fff;
 	background: none;
-}
-
+ }
+ 
 .piecolumn ul li.managedcare input {
 	color: #a0a0a0;
 	margin-top: -2px;
-}
-
-.piecolumn ul li.cash input {
-	margin-top: -2px;
-}
-
+ }
+ 
+.piecolumn ul li.cash input {margin-top: -2px;}
+ 
+.piecolumn li.cash::after {margin-top: -2px;}
+ 
 /* TOTAL PIE */
 div.totalpie {
 	position: absolute;
 	top: 391px;
 	right: 236px;
-}
+ }
+ 
 .totalpie input {
 	border: none;
 	text-align: right;
@@ -166,29 +225,40 @@ div.totalpie {
 	font-size: 23px;
 	color: #a0a0a0;
 	background: none;
-}
+ }
+ 
 .totalpie sup {
 	color: #a0a0a0;
 	margin-left: 2px;
-}
+ }
+ 
 /* TOTAL COLUMN */
 div.totalcolumn {
 	position: absolute;
 	top: 597px;
 	left: 420px;
-}
-
+ }
+ 
+.totalcolumn::before {
+	content: '$';
+	font-size: 24px;
+	color: #15520e;
+	position: absolute;
+	top: 14px;
+	left: 20px;
+ }
+ 
 .totalcolumn input {
 	border: none;
-	text-align: center;
+	text-align: right;
 	font-family: bangla_mnregular;
 	width: 250px;
 	padding: 6px 0 5px 0;
 	font-size: 37px;
 	color: #15520e;
 	background: none;
-}
-
+ }
+ 
 /* PIE CHART */
 .mmmmmmpie {
 	position: absolute;
@@ -197,7 +267,8 @@ div.totalcolumn {
 	display: block;
 	width: 300px; /*242px;*/
 	height: 300px; /*242px;*/
-}
+ }
+ 
 .pieplate {
 	display: block;
 	width: 240px;
@@ -205,7 +276,8 @@ div.totalcolumn {
 	border: 2px solid #e2e2e2;
 	border-radius: 300px;
 	margin: auto;
-}
+ }
+ 
 .pie {
 	display: block;
 	background: #179CC3;
@@ -214,4 +286,4 @@ div.totalcolumn {
 	border: 10px solid #fff;
 	border-radius: 300px;
 	margin: 10px auto;
-}
+ }
